--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Live burn dashboard for BUMPER on Solana: total burned, USD value, price, and recent burn transactions." />
   <link rel="preload" as="image" href="bg-desktop.png">
   <link rel="preload" as="image" href="bg-thumb.webp">
+  <link rel="preload" as="image" href="titolotr.png">
   <style>
     :root{
       --glass-bg: rgba(0,0,0,0.38);
@@ -26,25 +27,24 @@
 
   <script>
     // ---- Config ----
-    const BG_SRC      = 'bg-desktop.png';       // main background (title is baked-in)
+    const BG_SRC      = 'bg-desktop.png';       // main background
     const THUMB_SRC   = 'bg-thumb.webp';        // small preview (optional)
+    const TITLE_SRC   = 'titolotr.png';         // title image (trimmed to remove transparent padding)
 
     const BURN_JSON   = 'data/burn.json';
     const PRICE_JSON  = 'data/price.json';
-    const FIT_MODE    = 'cover'; // keep cover for full bleed
-    // Background focus: 0 = top, 0.5 = center, 1 = bottom
-    let BG_FOCUS_X = 0.5;
-    let BG_FOCUS_Y = 0.36; // show a bit more sky/title area
+    const FIT_MODE    = 'cover'; // 'contain' to avoid any crop
 
-    // Draw UI only when everything is ready (bg + data)
+    // Draw UI only when everything is ready (bg + title + data)
     const DRAW_UI_ONLY_WHEN_READY = true;
     const USE_THUMB_PLACEHOLDER   = false; // if true, shows blurred thumb before HD bg
 
     // Layout anchors
-    let TOP_OVERLAY_Y   = 0.15; // baseline % height for top cards (will be clamped below)
-    const TOP_MIN_Y     = 0.18; // never let cards go above this (keeps them under the title)
-    let TABLE_TOP_Y_PCT = 0.72; // table starts well below the car
+    let TOP_OVERLAY_Y   = 0.12; // y for the two top cards
     let BOTTOM_PRICE_Y  = 0.90;
+
+    // Title placement (top center)
+    const TITLE_TOP_MARGIN_PX = 6;
 
     // Colors
     const COLOR = {
@@ -84,24 +84,10 @@
     }
     const px = (n)=> Math.round(n * scaleUnit());
 
-    // --- Optional tuning via URL: ?cardsY=14 (14%) ---
-    (function applyQueryTweaks(){
-      try {
-        const qs = new URLSearchParams(location.search);
-        const cardsY = Number(qs.get('cardsY'));
-        if (!Number.isNaN(cardsY)) TOP_OVERLAY_Y = Math.min(0.30, Math.max(0.05, cardsY/100));
-        const fy = Number(qs.get('focusY'));
-        if (!Number.isNaN(fy)) BG_FOCUS_Y = Math.min(1, Math.max(0, fy));
-        const fx = Number(qs.get('focusX'));
-        if (!Number.isNaN(fx)) BG_FOCUS_X = Math.min(1, Math.max(0, fx));
-        const ty = Number(qs.get('tableY'));
-        if (!Number.isNaN(ty)) TABLE_TOP_Y_PCT = Math.min(0.88, Math.max(0.62, ty/100));
-      } catch {}
-    })();
-
     // -------- Progressive background loading (blur-up + crossfade) --------
     let thumbBitmap = null;
     let mainBitmap  = null;
+    let titleTrim   = null; // {top,bottom,left,right}
     let bgReady = false;
     let fadeAlpha = 0; // 0..1
 
@@ -116,6 +102,30 @@
         return null;
       }
     }
+
+    // Title image (auto-trim transparent padding)
+    const titleImg = new Image();
+    let titleReady = false;
+    titleImg.onload = ()=>{
+      try {
+        const iw = titleImg.naturalWidth, ih = titleImg.naturalHeight;
+        const off = document.createElement('canvas');
+        off.width = iw; off.height = ih;
+        const octx = off.getContext('2d');
+        octx.drawImage(titleImg, 0, 0);
+        const { data } = octx.getImageData(0,0,iw,ih);
+        const alphaAt = (x,y)=> data[(y*iw + x)*4 + 3];
+        let top=0, bottom=ih-1, left=0, right=iw-1;
+        for (let y=0; y<ih; y++){ for (let x=0; x<iw; x++){ if (alphaAt(x,y) > 8){ top=y; y=ih; break; } } }
+        for (let y=ih-1; y>=0; y--){ for (let x=0; x<iw; x++){ if (alphaAt(x,y) > 8){ bottom=y; y=-1; break; } } }
+        for (let x=0; x<iw; x++){ for (let y=0; y<ih; y++){ if (alphaAt(x,y) > 8){ left=x; x=iw; break; } } }
+        for (let x=iw-1; x>=0; x--){ for (let y=0; y<ih; y++){ if (alphaAt(x,y) > 8){ right=x; x=-1; break; } } }
+        titleTrim = { top, bottom: ih-1-bottom, left, right: iw-1-right };
+      } catch(e){ console.warn('Title trim failed', e); titleTrim = null; }
+      titleReady = true; draw();
+    };
+    titleImg.onerror = ()=>{ console.warn('Failed to load title image:', TITLE_SRC); };
+    titleImg.src = TITLE_SRC;
 
     // Load bg: thumb (optional) then main
     (async function initBackground(){
@@ -191,17 +201,12 @@
       const bmp = (bgReady && mainBitmap) ? mainBitmap : (showThumb ? thumbBitmap : null);
 
       if (bmp){
-        // --- cover with focus crop ---
         const imgW = bmp.width, imgH = bmp.height;
         const scale = (FIT_MODE === 'cover') ? Math.max(w / imgW, h / imgH) : Math.min(w / imgW, h / imgH);
-        const sw = Math.min(imgW, Math.round(w / scale));
-        const sh = Math.min(imgH, Math.round(h / scale));
-        const cx = Math.round(BG_FOCUS_X * imgW);
-        const cy = Math.round(BG_FOCUS_Y * imgH);
-        const sx = Math.max(0, Math.min(imgW - sw, cx - Math.round(sw/2)));
-        const sy = Math.max(0, Math.min(imgH - sh, cy - Math.round(sh/2)));
-        if (showThumb){ ctx.save(); ctx.filter = 'blur(8px)'; ctx.drawImage(bmp, sx, sy, sw, sh, 0, 0, w, h); ctx.restore(); }
-        else { ctx.drawImage(bmp, sx, sy, sw, sh, 0, 0, w, h); }
+        const dw = imgW * scale; const dh = imgH * scale;
+        const dx = (w - dw) / 2; const dy = (h - dh) / 2;
+        if (showThumb){ ctx.save(); ctx.filter = 'blur(8px)'; ctx.drawImage(bmp, dx, dy, dw, dh); ctx.restore(); }
+        else { ctx.drawImage(bmp, dx, dy, dw, dh); }
         ctx.fillStyle = grad; ctx.fillRect(0,0,w,h);
       } else {
         ctx.fillStyle = '#0b0b12'; ctx.fillRect(0,0,w,h);
@@ -216,18 +221,41 @@
       drawBackground(w, h);
       linkHitboxes = [];
 
-      // Wait until bg + data are ready
+      // Wait until bg + title + data are ready
       const dataReady = !!(burn && price);
-      const uiReady = (!!mainBitmap && dataReady);
+      const uiReady = (!!mainBitmap && !!titleReady && dataReady);
       if (DRAW_UI_ONLY_WHEN_READY && !uiReady) return;
 
-      // --- Top metrics (two compact edge cards) ---
-      let topY = Math.floor(h * Math.max(TOP_OVERLAY_Y, TOP_MIN_Y));
-      const margin = Math.max(px(16), Math.floor(w*0.035));
-      const cardW  = Math.min(Math.max(px(240), Math.floor(w*0.22)), px(420));
-      const cardH  = px(68);
-      const totalX = margin;                 // left-aligned
-      const usdX   = w - margin - cardW;     // right-aligned
+      // --- Title image at top center ---
+      if (titleReady){
+        if (titleTrim){
+          const srcX = titleTrim.left || 0;
+          const srcY = titleTrim.top  || 0;
+          const srcW = titleImg.naturalWidth  - (titleTrim.left||0) - (titleTrim.right||0);
+          const srcH = titleImg.naturalHeight - (titleTrim.top ||0) - (titleTrim.bottom||0);
+          const maxW = Math.min(w * 0.55, px(760));
+          const scale = maxW / srcW;
+          const tw = maxW; const th = srcH * scale;
+          const tx = Math.floor((w - tw) / 2);
+          const ty = px(TITLE_TOP_MARGIN_PX);
+          ctx.drawImage(titleImg, srcX, srcY, srcW, srcH, tx, ty, tw, th);
+        } else {
+          const maxW = Math.min(w * 0.55, px(760));
+          const scale = maxW / titleImg.naturalWidth;
+          const tw = maxW; const th = titleImg.naturalHeight * scale;
+          const tx = Math.floor((w - tw) / 2);
+          const ty = px(TITLE_TOP_MARGIN_PX);
+          ctx.drawImage(titleImg, tx, ty, tw, th);
+        }
+      }
+
+      // --- Top metrics (two cards) ---
+      const topY = Math.floor(h * TOP_OVERLAY_Y);
+      const cardW = Math.min(Math.max(px(300), Math.floor(w*0.28)), px(520));
+      const cardH = px(84);
+      const gap   = Math.min(px(24), Math.floor(w*0.04));
+      const totalX = Math.floor((w - (cardW*2 + gap)) / 2);
+      const usdX   = totalX + cardW + gap;
 
       drawGlass(totalX, topY, cardW, cardH);
       drawGlass(usdX,  topY, cardW, cardH);
@@ -236,12 +264,8 @@
       const pxUsd = price?.priceUsd ? Number(price.priceUsd) : 0;
       const totalUsd = (price?.burnTotalUsd != null) ? Number(price.burnTotalUsd) : (totalTokens * pxUsd);
 
-      const padX = px(12), padY = px(10);
-      text({ str: 'Total burned',        x: totalX+padX, y: topY+padY+2, size: px(11), color: COLOR.muted, weight: 700, baseline: 'top' });
-      text({ str: 'Total USD burned',    x: usdX+padX,   y: topY+padY+2, size: px(11), color: COLOR.muted, weight: 700, baseline: 'top' });
-
-      text({ str: fitNumber(totalTokens, 6)+' BUMPER', x: totalX+padX, y: topY+padY+px(26), size: px(20), weight: 800, color: COLOR.accent,  baseline: 'top' });
-      text({ str: money(totalUsd),                  x: usdX+padX,   y: topY+padY+px(26), size: px(20), weight: 800, color: COLOR.accent2, baseline: 'top' });
+      const padX = px(14), padY = px(12);
+      text({ str: 'Total burned',        x: totalX+padX, y: topY+padY+2, size: px(12), color: COLOR.muted, weight: 700, baseline: 'top' });
       text({ str: 'Total USD burned',    x: usdX+padX,   y: topY+padY+2, size: px(12), color: COLOR.muted, weight: 700, baseline: 'top' });
 
       text({ str: fitNumber(totalTokens, 6)+' BUMPER', x: totalX+padX, y: topY+padY+px(32), size: px(22), weight: 800, color: COLOR.accent,  baseline: 'top' });
@@ -256,11 +280,11 @@
       const rowH   = px(24), headH = px(46), tPad = px(10);
       const tableH = headH + Math.max(1, rows.length) * rowH + tPad*2;
       let tableX = Math.floor((w - tableW)/2);
-      let tableY = Math.floor(h * TABLE_TOP_Y_PCT); // comfortably below the car
+      let tableY = Math.floor(h * 0.64); // just below the car
       if (tableY + tableH > h - 12) tableY = h - 12 - tableH;
 
       // --- Mini-cards above table: Supply (left) and Last updated (right) ---
-      const miniGap = px(12);
+      const miniGap = px(10);
       const miniH = px(42);
 
       // Supply
@@ -343,20 +367,6 @@
     window.addEventListener('resize', draw);
     refreshData();
     setInterval(refreshData, 5*60*1000);
-
-    window.addEventListener('error', (e)=>{
-      try {
-        ctx.save();
-        ctx.fillStyle = 'rgba(0,0,0,0.6)';
-        ctx.fillRect(0,0,canvas.width,canvas.height);
-        ctx.setTransform(1,0,0,1,0,0);
-        ctx.fillStyle = '#ffbab8';
-        ctx.font = 'bold 16px system-ui, sans-serif';
-        ctx.fillText('Runtime error: '+(e.error?.message || e.message || 'unknown'), 16, 32);
-        ctx.restore();
-      } catch(_){}
-    });
   </script>
 </body>
 </html>
-
