--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Live burn dashboard for BUMPER on Solana: total burned, USD value, price, and recent burn transactions." />
   <link rel="preload" as="image" href="bg-desktop.png">
   <link rel="preload" as="image" href="bg-thumb.webp">
-  <link rel="preload" as="image" href="titolotr.png">
   <style>
     :root{
       --glass-bg: rgba(0,0,0,0.38);
@@ -29,22 +28,18 @@
     // ---- Config ----
     const BG_SRC      = 'bg-desktop.png';       // main background
     const THUMB_SRC   = 'bg-thumb.webp';        // small preview (optional)
-    const TITLE_SRC   = 'titolotr.png';         // title image (trimmed to remove transparent padding)
 
     const BURN_JSON   = 'data/burn.json';
     const PRICE_JSON  = 'data/price.json';
     const FIT_MODE    = 'cover'; // 'contain' to avoid any crop
 
-    // Draw UI only when everything is ready (bg + title + data)
+    // Draw UI only when everything is ready (bg + data)
     const DRAW_UI_ONLY_WHEN_READY = true;
     const USE_THUMB_PLACEHOLDER   = false; // if true, shows blurred thumb before HD bg
 
     // Layout anchors
     let TOP_OVERLAY_Y   = 0.12; // y for the two top cards
     let BOTTOM_PRICE_Y  = 0.90;
-
-    // Title placement (top center)
-    const TITLE_TOP_MARGIN_PX = 6;
 
     // Colors
     const COLOR = {
@@ -87,7 +82,6 @@
     // -------- Progressive background loading (blur-up + crossfade) --------
     let thumbBitmap = null;
     let mainBitmap  = null;
-    let titleTrim   = null; // {top,bottom,left,right}
     let bgReady = false;
     let fadeAlpha = 0; // 0..1
 
@@ -102,30 +96,6 @@
         return null;
       }
     }
-
-    // Title image (auto-trim transparent padding)
-    const titleImg = new Image();
-    let titleReady = false;
-    titleImg.onload = ()=>{
-      try {
-        const iw = titleImg.naturalWidth, ih = titleImg.naturalHeight;
-        const off = document.createElement('canvas');
-        off.width = iw; off.height = ih;
-        const octx = off.getContext('2d');
-        octx.drawImage(titleImg, 0, 0);
-        const { data } = octx.getImageData(0,0,iw,ih);
-        const alphaAt = (x,y)=> data[(y*iw + x)*4 + 3];
-        let top=0, bottom=ih-1, left=0, right=iw-1;
-        for (let y=0; y<ih; y++){ for (let x=0; x<iw; x++){ if (alphaAt(x,y) > 8){ top=y; y=ih; break; } } }
-        for (let y=ih-1; y>=0; y--){ for (let x=0; x<iw; x++){ if (alphaAt(x,y) > 8){ bottom=y; y=-1; break; } } }
-        for (let x=0; x<iw; x++){ for (let y=0; y<ih; y++){ if (alphaAt(x,y) > 8){ left=x; x=iw; break; } } }
-        for (let x=iw-1; x>=0; x--){ for (let y=0; y<ih; y++){ if (alphaAt(x,y) > 8){ right=x; x=-1; break; } } }
-        titleTrim = { top, bottom: ih-1-bottom, left, right: iw-1-right };
-      } catch(e){ console.warn('Title trim failed', e); titleTrim = null; }
-      titleReady = true; draw();
-    };
-    titleImg.onerror = ()=>{ console.warn('Failed to load title image:', TITLE_SRC); };
-    titleImg.src = TITLE_SRC;
 
     // Load bg: thumb (optional) then main
     (async function initBackground(){
@@ -221,33 +191,10 @@
       drawBackground(w, h);
       linkHitboxes = [];
 
-      // Wait until bg + title + data are ready
+      // Wait until bg + data are ready
       const dataReady = !!(burn && price);
-      const uiReady = (!!mainBitmap && !!titleReady && dataReady);
+      const uiReady = (!!mainBitmap && dataReady);
       if (DRAW_UI_ONLY_WHEN_READY && !uiReady) return;
-
-      // --- Title image at top center ---
-      if (titleReady){
-        if (titleTrim){
-          const srcX = titleTrim.left || 0;
-          const srcY = titleTrim.top  || 0;
-          const srcW = titleImg.naturalWidth  - (titleTrim.left||0) - (titleTrim.right||0);
-          const srcH = titleImg.naturalHeight - (titleTrim.top ||0) - (titleTrim.bottom||0);
-          const maxW = Math.min(w * 0.55, px(760));
-          const scale = maxW / srcW;
-          const tw = maxW; const th = srcH * scale;
-          const tx = Math.floor((w - tw) / 2);
-          const ty = px(TITLE_TOP_MARGIN_PX);
-          ctx.drawImage(titleImg, srcX, srcY, srcW, srcH, tx, ty, tw, th);
-        } else {
-          const maxW = Math.min(w * 0.55, px(760));
-          const scale = maxW / titleImg.naturalWidth;
-          const tw = maxW; const th = titleImg.naturalHeight * scale;
-          const tx = Math.floor((w - tw) / 2);
-          const ty = px(TITLE_TOP_MARGIN_PX);
-          ctx.drawImage(titleImg, tx, ty, tw, th);
-        }
-      }
 
       // --- Top metrics (two cards) ---
       const topY = Math.floor(h * TOP_OVERLAY_Y);
